--- a/Ecommerce/src/app/carousel/carousel.component.html
+++ b/Ecommerce/src/app/carousel/carousel.component.html
@@ -17,23 +17,52 @@
   </div>
 
 
-<div class="carousel" >
-  
-  <mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" >
-    <mdb-carousel-item *ngFor="let elt of carousel">
-      <img
-        src="{{elt.photo}}"
-        class="d-block w-100 sliderimg"
-        alt="..."
-      />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>{{elt.name}}</h5>
-        <p>{{elt.description}}</p>
-      </div>
-    </mdb-carousel-item>
-  </mdb-carousel>
 
-</div>
+
+  <div class="carousel" >
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../../assets/img/slider/asian-1238726_1280.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5></h5>
+            <p></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/img/slider/barbecue-1239434_1280.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../../assets/img/slider/brochette1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+
+
+    </div>
 
 
 
