--- a/Ecommerce/src/app/modal-alert/modal-alert.component.html
+++ b/Ecommerce/src/app/modal-alert/modal-alert.component.html
@@ -1,26 +1,26 @@
 
-<div class="container_details m-2">
+<div class="container_details m-2 sticky-top">
   
   <button
   type="button"
   class="btn-close float-end"
   aria-label="Close"
-  (click)="modalRef2.close()"
+  (click)="dialogRef.close()"
 ></button>
   <div class="row">
   
    <div class="col-md-8">
-    <h3 class="alert alert-primary">Détails Produit </h3>
+    <h3 class="alert alert-primary">Détails Produit : {{data.produit.name}}</h3>
  
      <div class="card alert-light text-bg mb-3" >
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="{{produit?.photo}}" class="img-fluid rounded-start" alt="photo produit">
+            <img src="{{data.produit.photo}}" class="img-fluid rounded-start" alt="photo produit">
           </div>
           <div class="col-md-8">
             <div class="card-body">
              
-              <h5 class="card-title">{{produit?.name | titlecase}} - {{produit?.description}} </h5>
+              <h5 class="card-title">{{data.produit.name | titlecase}} - {{data.produit.description}} </h5>
               <p class="card-text"><small class="text-muted">Allergène :{{produit?.allergene}}</small></p>
               
               <p class="card-text mx-2">
@@ -30,7 +30,7 @@
                </div>
                
           </div>
-          <button class="btn btn-primary btn-lg float-end mb-2" (click)="AjoutPanier()">Ajouter au panier</button>
+          <button class="btn btn-primary btn-lg float-end mb-2" (click)="AjoutPanier(data.produit)">Ajouter au panier</button>
           
         </div>
        
@@ -42,18 +42,8 @@
         <hr>
         
        <p class="alert alert-warning mt-2">Frais de livraison non inclus à ce stade. Livraison <b>immédiate</b>.<br>Dépendant de votre localisation.</p>
-       <p class="alert alert-primary">
-        Taux d'expédition des commandes: Excellent.<br>
-        Score Qualité: Excellent.<br>        
-        Avis des consommateurs: Excellent</p>
-        <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
+       <p class="alert alert-danger">Merci de noter que <b>les frais de livraison</b> sont à la charge du client.</p>
       
 
-       <!-- <button type="button" class="btn btn-warning btn-lg" (click)="AfficherPanier()">
-          Voir Panier
-       </button>-->
-      </div>
-     <!--
-<div [ngClass]="{'alert alert-info text-center sticky-bottom': messages}">{{messages}}</div>-->
-
+     
     </div>
