--- a/Ecommerce/src/app/modal/modal.component.html
+++ b/Ecommerce/src/app/modal/modal.component.html
@@ -4,30 +4,36 @@
       type="button"
       class="btn-close"
       aria-label="Close"
-      (click)="modalRef.close()"
+      (click)="dialogRef.close()"
     ></button>
   </div>
   <div class="modal-body">
     
-    <div class="prod"  *ngFor="let p of produit; let i = index">
+    <div class="prod"  *ngFor="let p of data.produit; let i = index">
 
-       <img src="{{p.photo}}">
-        <div class="aff">
-            <div class="row">
-               <div class="col"><a (click)="search(p)"><h3>{{p.name}}</h3></a><p>{{p.description}}</p> </div> 
+      <img src="{{p.photo}}" alt="...">
+
+      <div class="row">
+               <div class="col"><h3>{{p.name}}</h3><p>{{p.description}}</p> </div> 
                <div class="col text">{{p.prix}} Dhs</div>
-            <div class="row">
-                <div class="col-md-6 m-auto">Allergène: {{p.allergene}}</div>
-                <div class="col-md-6 m-auto"><button class="btn btn-warning btn-lg">Compare</button></div>
             </div>
+       <div class="row">
+                <div class="col-md-6 m-auto">Allergène: {{p.allergene}}</div>
+                <div class="col-md-6 m-auto">
+                  <a (click)="search(p)">
+                    <button class="btn btn-warning btn-lg">Voir Produit</button>
+                  </a>
+                  </div>
+           
 
-        </div>
-    </div>
+          </div>     
+      
+     
     </div>
 
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="modalRef.close()">
+    <button type="button" class="btn btn-secondary" (click)="dialogRef.close()" >
       Close
     </button>
    <!-- <button type="button" class="btn btn-primary">Save changes</button>-->
