--- a/Ecommerce/src/app/header/carousel/carousel.component.html
+++ b/Ecommerce/src/app/header/carousel/carousel.component.html
@@ -21,34 +21,35 @@
 
   <div class="carousel" >
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="../../assets/img/slider/asian-1238726_1280.jpg" class="d-block w-100" alt="...">
+       
+    
+       
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="../../../assets/img/slider/asian-1238724_1280.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5></h5>
-            <p></p>
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../../assets/img/slider/barbecue-1239434_1280.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="2000" *ngFor="let item of carousel">
+          <img src="{{item.photo}}" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>{{item.name}}</h5>
+            <p>{{item.description}}</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="../../assets/img/slider/brochette1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
-          </div>
-        </div>
+
+
+
+
+
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
