--- a/Ecommerce/src/app/operation/produit/produit.component.html
+++ b/Ecommerce/src/app/operation/produit/produit.component.html
@@ -4,8 +4,8 @@
 
 <mat-stepper #stepper>
   <mat-step [stepControl]="produitForm" errorMessage="Name is required.">
-    <form [formGroup]="produitForm" (click)="onSubmit()">
-      <ng-template matStepLabel>Fill out your name</ng-template>
+    <form [formGroup]="produitForm" >
+      <ng-template matStepLabel>Détail produit</ng-template>
 
       
       <div class="divform">
@@ -34,17 +34,22 @@
            </mat-select>
           </mat-form-field>
     
-          <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>Discount</mat-label>
-            <input matInput placeholder="Discount" formControlName="discount">
-          </mat-form-field>
     
+          <mat-form-field class="example-full-width"  appearance="fill" >
+            <mat-label>Discount ?</mat-label>
+            <mat-select formControlName="discount" >
+              <mat-option value="{{discount}}" *ngFor="let discount of discounts" >{{discount}}%</mat-option>
+           </mat-select>
+          </mat-form-field>
+
+
+
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Description</mat-label>
           <textarea matInput placeholder="Description" formControlName="description"></textarea>
         </mat-form-field>
     
-        <button  mat-raised-button color="primary">Enregistrer</button>
+       
      
       </div>
 
@@ -54,19 +59,16 @@
       </div>
     </form>
   </mat-step>
-  <mat-step [stepControl]="allergeneForm" errorMessage="Address is required.">
+  <mat-step [stepControl]="allergeneForm" errorMessage="allergènes is required.">
     
-      <ng-template matStepLabel>Fill out your address</ng-template>
+      <ng-template matStepLabel>Choisir les allergènes</ng-template>
      
 
 <!--checkbox-->
 <div class="example-section" >
-  <h4> Liste d'allergènes:</h4>
-  <section class="example-section">
-    <mat-checkbox class="example-margin">Check me!</mat-checkbox>
-    <mat-checkbox class="example-margin" [disabled]="true">Disabled</mat-checkbox>
-  </section>
+  <h4 class="m-5"> Liste d'allergènes:</h4>
   
+  <div class="divform">
   <section class="example-section">
     <span class="example-list-section">
       <mat-checkbox class="example-margin"
@@ -89,7 +91,7 @@
       </ul>
     </span>
   </section>
-
+</div>
 </div>
       <div>
         <p>Go to a different step to see the error state</p>
@@ -98,12 +100,57 @@
       </div>
     
   </mat-step>
+
+
+  <mat-step errorMessage="La photo est obligatoire">
+    
+    <ng-template matStepLabel>Ajouter une photo</ng-template>
+   
+
+<!--checkbox-->
+<div class="example-section" >
+<h4 class="m-5"> Photo du produit </h4>
+
+<div class="divform">
+<!--Upload file-->
+  <input type="file" class="file-input"
+  (change)="onFileSelected($event)" #fileUpload>
+
+<div class="file-upload">
+
+{{fileName || "No file uploaded yet."}}
+
+<button mat-mini-fab color="primary" class="upload-btn"
+ (click)="fileUpload.click()">
+   <mat-icon>attach_file</mat-icon>
+</button>
+</div>
+
+
+
+
+</div>
+</div>
+    <div>
+      <p>Go to a different step to see the error state</p>
+      <button mat-raised-button  matStepperPrevious>Back</button>
+      <button mat-raised-button color="warn" matStepperNext>Next</button>
+    </div>
+  
+</mat-step>
+
+
+
+
+
+
   <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
+    <ng-template matStepLabel>Final</ng-template>
     
     <div class="divform">
 
-      <p>Upload photo.</p>
+      <p>Résumé produit</p>
+      
     </div>
     
     
@@ -111,6 +158,7 @@
     <div>
       <button mat-button matStepperPrevious>Back</button>
       <button mat-button (click)="stepper.reset()">Reset</button>
+      <button  mat-raised-button (click)="onSubmit()" color="primary">Enregistrer</button>
     </div>
   </mat-step>
 </mat-stepper>
