ajout produit admin

--- a/Ecommerce/src/app/operation/produit/produit.component.html
+++ b/Ecommerce/src/app/operation/produit/produit.component.html
@@ -1,164 +1,8 @@
-
-<h5>Ajouter Produit</h5>
-
-
-<mat-stepper #stepper>
-  <mat-step [stepControl]="produitForm" errorMessage="Name is required.">
-    <form [formGroup]="produitForm" >
-      <ng-template matStepLabel>Détail produit</ng-template>
-
-      
-      <div class="divform">
-
-        <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Name</mat-label>
-                <input matInput formControlName="name" placeholder="Name">
-        </mat-form-field>
-        <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Favori ?</mat-label>
-                <mat-select formControlName="favori">
-                  <mat-option value="oui">Oui</mat-option>
-                  <mat-option value="non">non</mat-option>
-                </mat-select>
-        </mat-form-field>
-             
-        <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Prix</mat-label>
-        <p>  <input matInput placeholder="Prix" formControlName="prix"></p>
-        </mat-form-field>
-        
-             <mat-form-field class="example-full-width"  appearance="fill" >
-            <mat-label>Catégorie ?</mat-label>
-            <mat-select formControlName="categorie" >
-              <mat-option value="{{categorie}}" *ngFor="let categorie of categories" >{{categorie}}</mat-option>
-           </mat-select>
-          </mat-form-field>
-    
-    
-          <mat-form-field class="example-full-width"  appearance="fill" >
-            <mat-label>Discount ?</mat-label>
-            <mat-select formControlName="discount" >
-              <mat-option value="{{discount}}" *ngFor="let discount of discounts" >{{discount}}%</mat-option>
-           </mat-select>
-          </mat-form-field>
+<h3>Operation Produit</h3>
 
 
-
-        <mat-form-field class="example-full-width" appearance="fill">
-          <mat-label>Description</mat-label>
-          <textarea matInput placeholder="Description" formControlName="description"></textarea>
-        </mat-form-field>
-    
-       
-     
-      </div>
-
-      <div>
-        <p>Go to a different step to see the error state</p>
-        <button mat-raised-button color="warn" matStepperNext>Next</button>
-      </div>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="allergeneForm" errorMessage="allergènes is required.">
-    
-      <ng-template matStepLabel>Choisir les allergènes</ng-template>
-     
-
-<!--checkbox-->
-<div class="example-section" >
-  <h4 class="m-5"> Liste d'allergènes:</h4>
-  
-  <div class="divform">
-  <section class="example-section">
-    <span class="example-list-section">
-      <mat-checkbox class="example-margin"
-                    [checked]="allComplete"
-                    [color]="task.color"
-                    [indeterminate]="someComplete()"
-                    (change)="setAll($event.checked)">
-        {{task.name}}
-      </mat-checkbox>
-    </span>
-    <span class="example-list-section">
-      <ul>
-        <li *ngFor="let subtask of task.subtasks">
-          <mat-checkbox [(ngModel)]="subtask.completed"
-                        [color]="subtask.color"
-                        (ngModelChange)="updateAllComplete()">
-            {{subtask.name}}
-          </mat-checkbox>
-        </li>
-      </ul>
-    </span>
-  </section>
-</div>
-</div>
-      <div>
-        <p>Go to a different step to see the error state</p>
-        <button mat-raised-button  matStepperPrevious>Back</button>
-        <button mat-raised-button color="warn" matStepperNext>Next</button>
-      </div>
-    
-  </mat-step>
-
-
-  <mat-step errorMessage="La photo est obligatoire">
-    
-    <ng-template matStepLabel>Ajouter une photo</ng-template>
-   
-
-<!--checkbox-->
-<div class="example-section" >
-<h4 class="m-5"> Photo du produit </h4>
-
-<div class="divform">
-<!--Upload file-->
-  <input type="file" class="file-input"
-  (change)="onFileSelected($event)" #fileUpload>
-
-<div class="file-upload">
-
-{{fileName || "No file uploaded yet."}}
-
-<button mat-mini-fab color="primary" class="upload-btn"
- (click)="fileUpload.click()">
-   <mat-icon>attach_file</mat-icon>
-</button>
-</div>
-
-
-
-
-</div>
-</div>
-    <div>
-      <p>Go to a different step to see the error state</p>
-      <button mat-raised-button  matStepperPrevious>Back</button>
-      <button mat-raised-button color="warn" matStepperNext>Next</button>
-    </div>
-  
-</mat-step>
-
-
-
-
-
-
-  <mat-step>
-    <ng-template matStepLabel>Final</ng-template>
-    
-    <div class="divform">
-
-      <p>{{message}}</p>
-      
-    </div>
-    
-    
-   
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button (click)="stepper.reset()">Reset</button>
-      <button  mat-raised-button (click)="onSubmit()" color="primary">Enregistrer</button>
-    </div>
-  </mat-step>
-</mat-stepper>
+<mat-tab-group mat-align-tabs="end">
+  <mat-tab label="Ajouter"><app-ajout-produit></app-ajout-produit></mat-tab>
+  <mat-tab label="Modifier"><app-modif-produit></app-modif-produit></mat-tab>
+  <mat-tab label="Supprimer"><app-supp-produit></app-supp-produit></mat-tab>
+</mat-tab-group>
