--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.html
@@ -1,35 +1,9 @@
 <app-carousel></app-carousel>
 
-
 <div class="produit_container">
-<div >
-  
-  <h3 class="m-2 text-muted text-center"></h3>
-
-<div class="container">
-    <div class="card" *ngFor="let produit of listProduit; let i =index">
-     
-        <img src="{{produit.photo}}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{produit.name}}</h5>
-          <p class="card-text">{{produit.description}}</p>
-          <p class="card-text-prix">{{produit.prix}} DH</p>
-          <a class="btn btn-outline-primary btn-lg me-2" (click)="AjouterPanier(produit)">Voir</a>
-  </div>
-      
-    </div>
-  </div>
-</div>
-
-
-</div>
-
-
-<!--
-<div class="produit_container">
-  <div *ngFor="let level of categorie">
+  <div *ngFor="let level of categorie; let i = index">
     
-    <h3 class="m-2 text-muted text-center">{{level.categorie}}</h3>
+    <h3 class="m-2 text-muted text-center">{{level[0]?.categorie}}</h3>
   
   <div class="container">
       <div class="card" *ngFor="let produit of level; let i =index">
@@ -47,4 +21,4 @@
   </div>
   
   
-  </div>-->
+  </div>
