patch produit backend

--- a/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
@@ -31,7 +31,7 @@
         <div class="row" >
           <div class="col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[0].photo}}"
+              <img class="card-img-top" src="{{elt[0].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title"> {{elt[0].name}}</h4>
@@ -45,7 +45,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[1].photo}}"
+              <img class="card-img-top" src="{{elt[1].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[1].name}}</h4>
@@ -58,7 +58,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[2].photo}}"
+              <img class="card-img-top" src="{{elt[2].photo.substring(6)}}"
               alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[2].name}}</h4>
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[3].photo}}"
+              <img class="card-img-top" src="{{elt[3].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[3].name}}</h4>
@@ -92,7 +92,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[4].photo}}"
+              <img class="card-img-top" src="{{elt[4].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[4].name}}</h4>
@@ -105,7 +105,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[5].photo}}"
+              <img class="card-img-top" src="{{elt[5].photo.substring(6)}}"
                alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[5].name}}</h4>
@@ -126,7 +126,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[6].photo}}"
+              <img class="card-img-top" src="{{elt[6].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[6].name}}</h4>
@@ -139,7 +139,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[7].photo}}"
+              <img class="card-img-top" src="{{elt[7].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[7].name}}</h4>
@@ -152,7 +152,7 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[8].photo}}"
+              <img class="card-img-top" src="{{elt[8].photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title">{{elt[8].name}}</h4>
