--- a/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.scss
+++ b/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.scss
@@ -20,6 +20,11 @@ h5{
   
   .example-full-width {
     width: 100%;
+    margin-right: 10px;
+  }
+  
+  .full-width {
+    width: 100%;
   }
 }
 .mat-stepper-horizontal {
@@ -32,4 +37,12 @@ h5{
 
 .file-input {
   display: none;
+}
+
+.example-input-wrapper {
+  margin-bottom: 16px;
+}
+
+label {
+  margin-right: 4px;
 }
