admin delete produit

--- a/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.scss
+++ b/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.scss
@@ -1,6 +1,7 @@
 
 
     img{
+       
         height: 270px;
     }
 
@@ -11,4 +12,8 @@
     padding: 5px;
     width: 95%;
     margin: auto;
+
+    .card-text{
+        height: 80px;
+    }
 }
