--- a/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
+++ b/Ecommerce/src/app/footer/carousel-footer/carousel-footer.component.html
@@ -126,11 +126,11 @@
         <div class="row">
           <div class="col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[6].photo.substring(6)}}"
+              <img class="card-img-top" src="{{elt[6]?.photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[6].name}}</h4>
-                <p class="card-text">{{elt[6].description}}</p>
+                <h4 class="card-title">{{elt[6]?.name}}</h4>
+                <p class="card-text">{{elt[6]?.description}}</p>
                 <a class="btn btn-info"  (click)="AjouterPanier(elt[6])">Ajouter Panier</a>
               
               </div>
@@ -139,11 +139,11 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[7].photo.substring(6)}}"
+              <img class="card-img-top" src="{{elt[7]?.photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[7].name}}</h4>
-                <p class="card-text">{{elt[7].description}}</p>
+                <h4 class="card-title">{{elt[7]?.name}}</h4>
+                <p class="card-text">{{elt[7]?.description}}</p>
                 <a class="btn btn-info" (click)="AjouterPanier(elt[7])">Ajouter Panier</a>
               
               </div>
@@ -152,11 +152,11 @@
   
           <div class="col-md-4 clearfix d-none d-md-block">
             <div class="card mb-2">
-              <img class="card-img-top" src="{{elt[8].photo.substring(6)}}"
+              <img class="card-img-top" src="{{elt[8]?.photo.substring(6)}}"
                    alt="Card image cap">
               <div class="card-body">
-                <h4 class="card-title">{{elt[8].name}}</h4>
-                <p class="card-text">{{elt[8].description}}</p>
+                <h4 class="card-title">{{elt[8]?.name}}</h4>
+                <p class="card-text">{{elt[8]?.description}}</p>
                 <a class="btn btn-info"  (click)="AjouterPanier(elt[8])">Ajouter Panier</a>
               
               </div>
