--- a/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.html
+++ b/Ecommerce/src/app/operation/produit/modif-produit/modif-produit.component.html
@@ -10,21 +10,23 @@
 </div>
 
 <mat-vertical-stepper [linear]="false" #stepper [animationDuration]="duration">
-  <mat-step [stepControl]="firstFormGroup">
+  <mat-step [stepControl]="selectForm">
+    <form [formGroup]="selectForm" >
     <!--<form [formGroup]="firstFormGroup">-->
-      <ng-template matStepLabel>Fill out your name</ng-template>
+      <ng-template matStepLabel>Modifier le produit </ng-template>
       
 
 
-      <form [formGroup]="selectForm" >
+     
 
         <div class="divform" >
             <mat-form-field class="full-width"  appearance="fill" >
                 <mat-label>Choisir Produit</mat-label>
                 <mat-select formControlName="name" >
-                  <mat-option value="{{produit.name}}" (click)="AfficheProduit()" *ngFor="let produit of listProduit" >{{produit.name}}</mat-option>
+                  <mat-option value="{{produit.name}}" (click)="AfficheProduit(produit)" *ngFor="let produit of listProduit" >{{produit.name}}</mat-option>
                </mat-select>
               </mat-form-field>
+              <div [ngClass]="{'alert alert-info' : message}">{{message}}</div>
             </div>      
     </form>
 
@@ -38,6 +40,13 @@
         <div *ngFor="let produit of selectedProduit">
 
          
+  <h4 class="m-5">Modification du produit {{produit.name}} </h4>
+            
+          <mat-form-field class="example-full-width"  appearance="fill">
+            <mat-label>Nom</mat-label>
+            <p><input matInput  [(ngModel)]="name" ></p>
+          </mat-form-field>
+    
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Favori ?</mat-label>
         <mat-select  [(value)]="produit.favori">
@@ -67,7 +76,7 @@
         <mat-label>Description</mat-label>
         <textarea matInput rows="3" [(ngModel)]="description"></textarea>
       </mat-form-field>
-      <button mat-raised-button color="warn" (click)="modifProduit(produit)" >Modifier</button>
+      <button mat-raised-button color="warn" (click)="modifProduit()" >Modifier</button>
      
  
 </div>
@@ -83,25 +92,119 @@
 
     <div>
 
-        <button mat-button matStepperNext>Next</button>
+        <button mat-raised-button color="warn" matStepperNext>Autre modification</button>
       </div>  
    <!--</form>-->
   </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>Fill out your address</ng-template>
+  <mat-step [stepControl]="selectForm">
+    
+      <ng-template matStepLabel>Modifier les allergènes du produit</ng-template>
       
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
+      <form [formGroup]="selectForm" >
+
+        <div class="divform" >
+            <mat-form-field class="full-width"  appearance="fill" >
+                <mat-label>Choisir Produit</mat-label>
+                <mat-select formControlName="name" >
+                  <mat-option value="{{produit.name}}" (click)="AfficheProduitallergene(produit)" *ngFor="let produit of listProduit" >{{produit.name}}</mat-option>
+               </mat-select>
+              </mat-form-field>
+              <div [ngClass]="{'alert alert-info' : messageallergene}">{{messageallergene}}</div>
+        </div>      
     </form>
+
+<ng-container *ngIf="stateAllergene">
+
+<!--checkbox-->
+<div class="example-section" >
+ 
+  <h4 class="m-5"> Liste d'allergènes {{produit.name}} :</h4>
+  
+  <div class="divform">
+  <section class="example-section">
+    <span class="example-list-section">
+      <mat-checkbox class="example-margin"
+                    [checked]="allComplete"
+                    [color]="task.color"
+                    [indeterminate]="someComplete()"
+                    (change)="setAll($event.checked)">
+        {{task.name}}
+      </mat-checkbox>
+    </span>
+    <span class="example-list-section">
+      <ul>
+        <li *ngFor="let subtask of task.subtasks">
+          <mat-checkbox [(ngModel)]="subtask.completed"
+                        [color]="subtask.color"
+                        (ngModelChange)="updateAllComplete()">
+            {{subtask.name}}
+          </mat-checkbox>
+        </li>
+      </ul>
+    </span> <button mat-raised-button color="warn" (click)="ModifierAllergene()">ModifierAllergène</button>
+
+  </section>
+ </div>
+</div>
+</ng-container>
+
+
+
+
+
+      <div>
+        <button mat-raised-button matStepperPrevious>Retour</button>
+        <button mat-raised-button color="warn" matStepperNext>Autre modification</button>
+      </div>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
-    You are now done.
+    <ng-template matStepLabel>Modifier la photo du produit</ng-template>
+    
+    <form [formGroup]="selectForm" >
+
+      <div class="divform" >
+          <mat-form-field class="full-width"  appearance="fill" >
+              <mat-label>Choisir Produit</mat-label>
+              <mat-select formControlName="name" >
+                <mat-option value="{{produit.name}}" (click)="AfficheProduitphoto(produit)" *ngFor="let produit of listProduit" >{{produit.name}}</mat-option>
+             </mat-select>
+            </mat-form-field>
+            <div [ngClass]="{'alert alert-info' : messagephoto}">{{messagephoto}}</div>
+      </div>      
+  </form>
+
+<ng-container *ngIf="statephoto">
+
+<!--checkbox-->
+<div class="example-section" >
+  <h4 class="m-5">Modification Photo du produit {{produit.name}} </h4>
+  
+  <div class="divform">
+  <!--Upload file-->
+    <input type="file" class="file-input"
+    (change)="onFileSelected($event)" #fileUpload>
+  
+  <div class="file-upload mx-5">
+  
+  {{fileName || "No file uploaded yet."}}
+  
+  <button mat-mini-fab color="primary" class="upload-btn"
+   (click)="fileUpload.click()">
+     <mat-icon>attach_file</mat-icon>
+  </button>
+  </div>
+  <button mat-raised-button color="warn" (click)="modifierPhoto()">Modifier</button>
+  </div>
+  </div>
+  
+  </ng-container>
+
+
+
+
+
     <div>
-      <button mat-button matStepperPrevious>Back</button>
+      <button mat-raised-button matStepperPrevious>Retour</button>
       <button mat-button (click)="stepper.reset()">Reset</button>
     </div>
   </mat-step>
