--- a/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
+++ b/Ecommerce/src/app/produit/affiche-produit/affiche-produit.component.scss
@@ -11,6 +11,9 @@
     gap:10px;
     padding: 10px ;
     
+    .card-text{
+      height:90px;
+    }
     img{
         height:200px;
         align-self: center;
