export bdd to excel

--- a/Ecommerce/src/app/operation/produit/ajout-produit/ajout-produit.component.html
+++ b/Ecommerce/src/app/operation/produit/ajout-produit/ajout-produit.component.html
@@ -113,8 +113,7 @@
 
 <div class="divform">
 <!--Upload file-->
-  <input type="file" class="file-input"
-  (change)="onFileSelected($event)" #fileUpload>
+  <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload>
 
 <div class="file-upload">
 
