--- a/Ecommerce/src/app/operation/produit/produit.component.html
+++ b/Ecommerce/src/app/operation/produit/produit.component.html
@@ -5,4 +5,5 @@
   <mat-tab label="Ajouter"><app-ajout-produit></app-ajout-produit></mat-tab>
   <mat-tab label="Modifier"><app-modif-produit></app-modif-produit></mat-tab>
   <mat-tab label="Supprimer"><app-supp-produit></app-supp-produit></mat-tab>
+  <mat-tab label="Import/Export"><app-import></app-import></mat-tab>
 </mat-tab-group>
