--- a/Ecommerce/src/app/header/nav/nav.component.html
+++ b/Ecommerce/src/app/header/nav/nav.component.html
@@ -7,7 +7,9 @@
     <li class="nav-item">
       <a class="nav-link" (click)="goTo('/contact')">Contact</a>
     </li>
-   
+    <li class="nav-item">
+      <a class="nav-link" (click)="goTo('/op_produit')">Admin</a>
+    </li>
   </ul>
 
 
